# colink-playbook-dev

./: .gitignore  Cargo.toml  LICENSE  README.md  download.sh  install.sh
.github/workflows/: build.yml  check.yml
example/file_transfer/: convert_param.py  playbook.toml  run_example.py
src/: config_process.rs  helper.rs  interpreter.rs  main.rs  runtime.rs  spec_parser.rs
