[package]
name = "colink-playbook-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
colink = "0.3.9"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = "1.24"
toml = "0.4"
tracing = "0.1"
