[package]
name = "colink-playbook-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
clap = { version = "4.0", features = ["derive", "env"] }
colink = "0.3.9"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = "1.24"
toml = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"
